Cleaned up shape code, added PolygonTest file